--- a/harness/harness.csproj
+++ b/harness/harness.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\AES-CTR-Netstandard.csproj" />
+    <ProjectReference Include="..\src\FastAes.csproj" />
   </ItemGroup>
 
 </Project>
